Add data transformation example to tutorial

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80092f9dd4a84f3594a9a02b0bef4af1",
+       "model_id": "259be837a4b84745b97870a3a52da906",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dc4e4d50d0e41e5a62899dc41386b09",
+       "model_id": "53ee591c7d81475797d4ee48cd9e5a38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "652d7eaa45704579bfe87e5702ca30a3",
+       "model_id": "731fefc7546947809c26e133f573710a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -419,7 +419,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78e776d5687b43568a7f6c9bf586ed86",
+       "model_id": "56924c9404454225b8c4c38d6f09aa6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -433,7 +433,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa030c2a83904a5daa57d2709bed505b",
+       "model_id": "b3aa0a504a6f4c6999ecc3339ca952ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,7 +499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ba798b2078e4c1f81197b4fa00a8899",
+       "model_id": "50330f09466a4a4096449864fd2aab4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -513,7 +513,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b55d584d46a14ca2ae5c993a5aba1434",
+       "model_id": "8acf4d3854074fe09ebdb941ab2dea2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -599,7 +599,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e38d74bdfe8841ee91a21fcb3764ac51",
+       "model_id": "08b88b8fe0b644e7b2c60216768cdfbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -613,7 +613,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f956cbc9a90>"
+       "<matplotlib.legend.Legend at 0x7fc85508d110>"
       ]
      },
      "execution_count": 11,
@@ -719,7 +719,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48208b2cf1b2464d87ee2d3926aa2c89",
+       "model_id": "27df11b0dc4f4cb099a0cc7d29caee03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,7 +733,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f956caaa750>"
+       "<matplotlib.legend.Legend at 0x7fc854f6f490>"
       ]
      },
      "execution_count": 12,
@@ -810,7 +810,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cea2044fb96b424ba6c68200cf98fb0e",
+       "model_id": "c07d76cc826e469d89473e140e07c07d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -824,7 +824,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f956c79d350>"
+       "<matplotlib.legend.Legend at 0x7fc854cc4ad0>"
       ]
      },
      "execution_count": 13,
@@ -904,7 +904,81 @@
     "\n",
     "where $v_a$ is a data point defined in coordinate system `a`, $O_{ab}$ is the orientation matrix of `a` in `b`, $c_{ab}$ the coordinates of `a` in `b` and $v_b$ the transformed data point.\n",
     "\n",
-    "> **TODO:** Short example "
+    "\n",
+    "Here is a short example that transformes the points of a square from "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb487c52f85347af810bd54265bde172",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7fc854a43e90>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lcs_target_in_ref = tf.LocalCoordinateSystem.construct_from_euler(\n",
+    "    sequence=\"zy\", angles=[90, 45], degrees=True, coordinates=[2, -2, 0]\n",
+    ")\n",
+    "lcs_ref_in_target = lcs_target_in_ref.invert()\n",
+    "\n",
+    "points_in_ref = np.array([[-1, 1, 0], [1, 1, 0], [1, -1, 0], [-1, -1, 0], [-1, 1, 0]],dtype=float).transpose()\n",
+    "\n",
+    "# Transform points to target system\n",
+    "\n",
+    "points_in_target = np.matmul(lcs_ref_in_target.orientation.data, points_in_ref) +  lcs_ref_in_target.coordinates.data[:,np.newaxis]\n",
+    "\n",
+    "\n",
+    "# plot coordinate systems\n",
+    "fig_trans = plt.figure()\n",
+    "fig_trans.canvas.layout.height = \"500px\"\n",
+    "fig_trans.canvas.layout.width = \"1000px\"\n",
+    "gs_trans = fig_trans.add_gridspec(1, 2)\n",
+    "ax3_0_trans = fig_trans.add_subplot(gs_trans[0, 0], projection=\"3d\")\n",
+    "ax3_1_trans = fig_trans.add_subplot(gs_trans[0, 1], projection=\"3d\")\n",
+    "\n",
+    "# first timestep\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_0_trans, color=\"r\", label=\"original system\")\n",
+    "vs.plot_coordinate_system(lcs_target_in_ref, ax3_0_trans, color=\"g\", label=\"target system\", time_idx=0)\n",
+    "ax3_0_trans.plot(points_in_ref[0],points_in_ref[1],points_in_ref[2])\n",
+    "ax3_0_trans.set_xlim([-3, 3])\n",
+    "ax3_0_trans.set_ylim([-3, 3])\n",
+    "ax3_0_trans.set_zlim([-3, 3])\n",
+    "ax3_0_trans.set_title(\"Data in original system\")\n",
+    "ax3_0_trans.legend()\n",
+    "\n",
+    "\n",
+    "# second timestep\n",
+    "vs.plot_coordinate_system(lcs_ref_in_target, ax3_1_trans, color=\"r\", label=\"original system\")\n",
+    "vs.plot_coordinate_system(cs_ref, ax3_1_trans, color=\"g\", label=\"target system\", time_idx=0)\n",
+    "ax3_1_trans.plot(points_in_target[0],points_in_target[1],points_in_target[2])\n",
+    "ax3_1_trans.set_xlim([-3, 3])\n",
+    "ax3_1_trans.set_ylim([-3, 3])\n",
+    "ax3_1_trans.set_zlim([-3, 3])\n",
+    "ax3_1_trans.set_title(\"Data in target system\")\n",
+    "ax3_1_trans.legend()"
    ]
   },
   {
@@ -924,34 +998,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9ee96912313409f82f2da0822adf21f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f956c679b50>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "time = [\"2010-02-02\", \"2010-02-07\"]\n",
     "coordinates_tdp = [[0, 3, 0], [-2, 3, 2]]\n",
