--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -876,7 +876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the time values `\"2010-02-01\"` and `\"2010-02-11\"`, which lie outside the original range from `\"2010-02-02\"` and `\"2010-02-07\"`  still get valid values due to the broadcasting accross time range boundaries. The intermediate coordinates and orientations are interpolated as expected.\n",
+    "As you can see, the time values `\"2010-02-01\"` and `\"2010-02-11\"`, which lie outside the original range from `\"2010-02-02\"` and `\"2010-02-07\"`  still get valid values due to the broadcasting across time range boundaries. The intermediate coordinates and orientations are interpolated as expected.\n",
     "\n",
     "# Transformation of spatial data\n",
     "\n",
