Modify LCS to support units

--- a/scripts/measurement_example.ipynb
+++ b/scripts/measurement_example.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Python\\weldx\n"
+      "C:\\Users\\vhirtham\\PycharmProjects\\bam\\weldx\n"
      ]
     }
    ],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,8 +476,15 @@
     "    # \"data_processors\": processors,\n",
     "}\n",
     "with asdf.AsdfFile(tree, extensions=[WeldxExtension(), WeldxAsdfExtension()]) as f:\n",
-    "    f.write_to(\"scripts/measurement_example.asdf\")"
+    "    f.write_to(\"scripts/measurement_example.yaml\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
