Add coordinate system section to measurement notebook

--- a/scripts/measurement_example.ipynb
+++ b/scripts/measurement_example.ipynb
@@ -46,6 +46,7 @@
     "from weldx import Q_\n",
     "\n",
     "import weldx.measurement as msm\n",
+    "import weldx.transformations as tf\n",
     "\n",
     "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension"
    ]
@@ -452,6 +453,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Coordinate Systems\n",
+    "\n",
+    "Most data does not make much sense without being able to determine where it was recorded in relation to a specimen or other measurement spots. Therefore, we define coordinate systems and their orientations towards each other. The basic principles are already explained in the transformation tutorials, so we will just define some coordinate systems without further explanation. To keep things simple, no time dependent coordinates are considered. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lcs_specimen_in_root = tf.LocalCoordinateSystem(coordinates=Q_(np.asarray([100, 75, 0]),\"mm\"))\n",
+    "lcs_flange_in_root = tf.LocalCoordinateSystem(orientation=tf.rotation_matrix_x(np.pi/2),\n",
+    "                                              coordinates=Q_(np.asarray([115, -10, 140]),\"mm\"))\n",
+    "lcs_torch_in_flange = tf.LocalCoordinateSystem(coordinates=Q_(np.asarray([100, 75, 0]),\"mm\"))\n",
+    "\n",
+    "coordinate_systems = tf.CoordinateSystemManager(\"root\")\n",
+    "coordinate_systems.add_coordinate_system(\"specimen\", \"root\", lcs_specimen_in_root)\n",
+    "coordinate_systems.add_coordinate_system(\"flange\", \"root\", lcs_flange_in_root)\n",
+    "coordinate_systems.add_coordinate_system(\"torch\", \"flange\", lcs_torch_in_flange)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **TODO:** Connect data to coordinate systems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Writing to ASDF\n",
     "Once we have define all object we can write them to a asdf file. To make the file easier to read we place some elements earlier in the tree."
    ]
@@ -467,6 +501,7 @@
     "measurements = [welding_current, welding_voltage]\n",
     "\n",
     "tree = {\n",
+    "    \"coordinate_systems\": coordinate_systems,\n",
     "    \"equipment\": equipment,\n",
     "    \"data\": measurement_data,\n",
     "    \"measurements\": measurements,\n",
@@ -476,7 +511,7 @@
     "    # \"data_processors\": processors,\n",
     "}\n",
     "with asdf.AsdfFile(tree, extensions=[WeldxExtension(), WeldxAsdfExtension()]) as f:\n",
-    "    f.write_to(\"scripts/measurement_example.yaml\")"
+    "    f.write_to(\"scripts/measurement_example.asdf\")"
    ]
   },
   {
