--- a/scripts/measurement_example.ipynb
+++ b/scripts/measurement_example.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "cd .."
+    "%cd .."
    ]
   },
   {
@@ -33,21 +33,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import asdf\n",
-    "import xarray as xr\n",
-    "import sympy\n",
-    "import pint\n",
     "import numpy as np\n",
+    "\n",
+    "import asdf\n",
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
+    "import pint\n",
+    "import sympy\n",
     "import weldx\n",
-    "\n",
-    "from weldx import Q_\n",
-    "\n",
     "import weldx.measurement as msm\n",
     "import weldx.transformations as tf\n",
-    "\n",
+    "import xarray as xr\n",
+    "from matplotlib import pyplot as plt\n",
+    "from weldx import Q_\n",
     "from weldx.asdf.extension import WeldxAsdfExtension, WeldxExtension"
    ]
   },
@@ -79,12 +76,12 @@
     "# a small helper function to generate a sine signal with its time axis. This supports using pint.Quantities !\n",
     "def sine(f, amp, t_end, samples=None):\n",
     "    \"\"\"Generate a sine with frequency f, amplitude amp and timespan t_end\"\"\"\n",
-    "    if samples is None: # default to 50 samples per period\n",
-    "        samples = int((t_end*2*Q_(\"Hz\")*50).to_reduced_units())+1\n",
-    "    om = 2*np.pi*f\n",
-    "    t = np.linspace(0*Q_(\"s\"),t_end,num=samples)\n",
-    "    y = amp * np.sin(t*om)\n",
-    "    return y,t"
+    "    if samples is None:  # default to 50 samples per period\n",
+    "        samples = int((t_end * 2 * Q_(\"Hz\") * 50).to_reduced_units()) + 1\n",
+    "    om = 2 * np.pi * f\n",
+    "    t = np.linspace(0 * Q_(\"s\"), t_end, num=samples)\n",
+    "    y = amp * np.sin(t * om)\n",
+    "    return y, t"
    ]
   },
   {
@@ -108,11 +105,11 @@
     }
    ],
    "source": [
-    "I,time = sine(f=1.5*Q_(\"Hz\"), amp=50*Q_(\"A\"), t_end=10*Q_(\"s\"))\n",
-    "time = pd.TimedeltaIndex(data=time.magnitude,unit=\"s\")+pd.Timestamp(\"2020-06-01\")\n",
+    "I, time = sine(f=1.5 * Q_(\"Hz\"), amp=50 * Q_(\"A\"), t_end=10 * Q_(\"s\"))\n",
+    "time = pd.TimedeltaIndex(data=time.magnitude, unit=\"s\") + pd.Timestamp(\"2020-06-01\")\n",
     "\n",
     "current_data = msm.Data(\n",
-    "    name=\"Welding current\", data=xr.DataArray(I, dims=[\"time\"],coords={\"time\":time})\n",
+    "    name=\"Welding current\", data=xr.DataArray(I, dims=[\"time\"], coords={\"time\": time})\n",
     ")\n",
     "current_data"
    ]
@@ -138,11 +135,11 @@
     }
    ],
    "source": [
-    "V,time = sine(f=1.5*Q_(\"Hz\"), amp=20*Q_(\"V\"), t_end=10*Q_(\"s\"))\n",
-    "time = pd.TimedeltaIndex(data=time.magnitude,unit=\"s\")+pd.Timestamp(\"2020-06-01\")\n",
+    "V, time = sine(f=1.5 * Q_(\"Hz\"), amp=20 * Q_(\"V\"), t_end=10 * Q_(\"s\"))\n",
+    "time = pd.TimedeltaIndex(data=time.magnitude, unit=\"s\") + pd.Timestamp(\"2020-06-01\")\n",
     "\n",
     "voltage_data = msm.Data(\n",
-    "    name=\"Welding voltage\", data=xr.DataArray(V, dims=[\"time\"],coords={\"time\":time})\n",
+    "    name=\"Welding voltage\", data=xr.DataArray(V, dims=[\"time\"], coords={\"time\": time})\n",
     ")\n",
     "voltage_data"
    ]
@@ -189,7 +186,8 @@
    "outputs": [],
    "source": [
     "from asdf.tags.core import Software\n",
-    "twincat_scope = Software(name = \"Beckhoff TwinCAT ScopeView\", version = \"3.4.3143\")"
+    "\n",
+    "twincat_scope = Software(name=\"Beckhoff TwinCAT ScopeView\", version=\"3.4.3143\")"
    ]
   },
   {
@@ -213,7 +211,7 @@
     "src_current = msm.Source(\n",
     "    name=\"Current Sensor\",\n",
     "    output_signal=msm.Signal(signal_type=\"analog\", unit=\"V\", data=None),\n",
-    "    error=msm.Error(Q_(0.1,\"percent\")),\n",
+    "    error=msm.Error(Q_(0.1, \"percent\")),\n",
     ")"
    ]
   },
@@ -257,8 +255,8 @@
     "\n",
     "[a, x, b] = sympy.symbols(\"a x b\")\n",
     "current_AD_func = MathematicalExpression(a * x + b)\n",
-    "current_AD_func.set_parameter(\"a\", Q_(32768.0/10.0,\"1/V\"))\n",
-    "current_AD_func.set_parameter(\"b\", Q_(0.0,\"\"))"
+    "current_AD_func.set_parameter(\"a\", Q_(32768.0 / 10.0, \"1/V\"))\n",
+    "current_AD_func.set_parameter(\"b\", Q_(0.0, \"\"))"
    ]
   },
   {
@@ -279,7 +277,7 @@
     "    name=\"AD conversion current measurement\",\n",
     "    input_signal=src_current.output_signal,\n",
     "    output_signal=msm.Signal(\"digital\", \"\", data=None),\n",
-    "    error=msm.Error(Q_(0.01,\"percent\")),\n",
+    "    error=msm.Error(Q_(0.01, \"percent\")),\n",
     "    func=current_AD_func,\n",
     ")"
    ]
@@ -320,8 +318,8 @@
    "source": [
     "# define current output calibration expression and transformation\n",
     "current_calib_func = MathematicalExpression(a * x + b)\n",
-    "current_calib_func.set_parameter(\"a\", Q_(1000.0/32768.0,\"A\"))\n",
-    "current_calib_func.set_parameter(\"b\", Q_(0.0,\"A\"))"
+    "current_calib_func.set_parameter(\"a\", Q_(1000.0 / 32768.0, \"A\"))\n",
+    "current_calib_func.set_parameter(\"b\", Q_(0.0, \"A\"))"
    ]
   },
   {
@@ -347,7 +345,7 @@
     "    output_signal=msm.Signal(\"digital\", \"A\", data=current_data),\n",
     "    error=msm.Error(0.0),\n",
     "    func=current_calib_func,\n",
-    "    meta=twincat_scope\n",
+    "    meta=twincat_scope,\n",
     ")"
    ]
   },
@@ -365,7 +363,9 @@
    "outputs": [],
    "source": [
     "welding_current_chain = msm.MeasurementChain(\n",
-    "    name=\"welding current measurement chain\", data_source=src_current, data_processors=[current_AD_transform, current_calib_transform]\n",
+    "    name=\"welding current measurement chain\",\n",
+    "    data_source=src_current,\n",
+    "    data_processors=[current_AD_transform, current_calib_transform],\n",
     ")"
    ]
   },
@@ -383,7 +383,9 @@
    "outputs": [],
    "source": [
     "welding_current = msm.Measurement(\n",
-    "    name=\"welding current measurement\", data=[current_data], measurement_chain=welding_current_chain\n",
+    "    name=\"welding current measurement\",\n",
+    "    data=[current_data],\n",
+    "    measurement_chain=welding_current_chain,\n",
     ")"
    ]
   },
@@ -404,7 +406,7 @@
     "src_voltage = msm.Source(\n",
     "    name=\"Voltage Sensor\",\n",
     "    output_signal=msm.Signal(\"analog\", \"V\", data=None),\n",
-    "    error=msm.Error(Q_(0.1,\"percent\")),\n",
+    "    error=msm.Error(Q_(0.1, \"percent\")),\n",
     ")\n",
     "\n",
     "HKS_sensor.sources.append(src_voltage)\n",
@@ -412,14 +414,14 @@
     "# define AD conversion expression and transformation step\n",
     "[a, x, b] = sympy.symbols(\"a x b\")\n",
     "voltage_ad_func = MathematicalExpression(a * x + b)\n",
-    "voltage_ad_func.set_parameter(\"a\", Q_(32768.0/10.0,\"1/V\"))\n",
-    "voltage_ad_func.set_parameter(\"b\", Q_(0.0,\"\"))\n",
+    "voltage_ad_func.set_parameter(\"a\", Q_(32768.0 / 10.0, \"1/V\"))\n",
+    "voltage_ad_func.set_parameter(\"b\", Q_(0.0, \"\"))\n",
     "\n",
     "voltage_AD_transform = msm.DataTransformation(\n",
     "    name=\"AD conversion voltage measurement\",\n",
     "    input_signal=src_voltage.output_signal,\n",
     "    output_signal=msm.Signal(\"digital\", \"\", data=None),\n",
-    "    error=msm.Error(Q_(0.01,\"percent\")),\n",
+    "    error=msm.Error(Q_(0.01, \"percent\")),\n",
     "    func=voltage_ad_func,\n",
     ")\n",
     "\n",
@@ -427,8 +429,8 @@
     "\n",
     "# define voltage output calibration expression and transformation\n",
     "voltage_calib_func = MathematicalExpression(a * x + b)\n",
-    "voltage_calib_func.set_parameter(\"a\", Q_(100.0/32768.0,\"V\"))\n",
-    "voltage_calib_func.set_parameter(\"b\", Q_(0.0,\"V\"))\n",
+    "voltage_calib_func.set_parameter(\"a\", Q_(100.0 / 32768.0, \"V\"))\n",
+    "voltage_calib_func.set_parameter(\"b\", Q_(0.0, \"V\"))\n",
     "\n",
     "voltage_calib_transform = msm.DataTransformation(\n",
     "    name=\"Calibration voltage measurement\",\n",
@@ -436,16 +438,20 @@
     "    output_signal=msm.Signal(\"digital\", \"V\", data=voltage_data),\n",
     "    error=msm.Error(0.0),\n",
     "    func=voltage_calib_func,\n",
-    "    meta=twincat_scope\n",
+    "    meta=twincat_scope,\n",
     ")\n",
     "\n",
     "\n",
     "welding_voltage_chain = msm.MeasurementChain(\n",
-    "    name=\"welding voltage measurement chain\", data_source=src_voltage, data_processors=[voltage_AD_transform, voltage_calib_transform]\n",
+    "    name=\"welding voltage measurement chain\",\n",
+    "    data_source=src_voltage,\n",
+    "    data_processors=[voltage_AD_transform, voltage_calib_transform],\n",
     ")\n",
     "\n",
     "welding_voltage = msm.Measurement(\n",
-    "    name=\"welding voltage measurement\", data=[voltage_data], measurement_chain=welding_voltage_chain\n",
+    "    name=\"welding voltage measurement\",\n",
+    "    data=[voltage_data],\n",
+    "    measurement_chain=welding_voltage_chain,\n",
     ")"
    ]
   },
@@ -464,10 +470,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcs_specimen_in_root = tf.LocalCoordinateSystem(coordinates=Q_(np.asarray([100, 75, 0]),\"mm\"))\n",
-    "lcs_flange_in_root = tf.LocalCoordinateSystem(orientation=tf.rotation_matrix_x(np.pi/2),\n",
-    "                                              coordinates=Q_(np.asarray([115, -10, 140]),\"mm\"))\n",
-    "lcs_torch_in_flange = tf.LocalCoordinateSystem(coordinates=Q_(np.asarray([100, 75, 0]),\"mm\"))\n",
+    "lcs_specimen_in_root = tf.LocalCoordinateSystem(\n",
+    "    coordinates=Q_(np.asarray([100, 75, 0]), \"mm\")\n",
+    ")\n",
+    "lcs_flange_in_root = tf.LocalCoordinateSystem(\n",
+    "    orientation=tf.rotation_matrix_x(np.pi / 2),\n",
+    "    coordinates=Q_(np.asarray([115, -10, 140]), \"mm\"),\n",
+    ")\n",
+    "lcs_torch_in_flange = tf.LocalCoordinateSystem(\n",
+    "    coordinates=Q_(np.asarray([100, 75, 0]), \"mm\")\n",
+    ")\n",
     "\n",
     "coordinate_systems = tf.CoordinateSystemManager(\"root\")\n",
     "coordinate_systems.add_coordinate_system(\"specimen\", \"root\", lcs_specimen_in_root)\n",
@@ -497,7 +509,7 @@
    "outputs": [],
    "source": [
     "equipment = [HKS_sensor, BH_ELM]\n",
-    "measurement_data = [current_data,voltage_data]\n",
+    "measurement_data = [current_data, voltage_data]\n",
     "measurements = [welding_current, welding_voltage]\n",
     "\n",
     "tree = {\n",
@@ -505,7 +517,7 @@
     "    \"equipment\": equipment,\n",
     "    \"data\": measurement_data,\n",
     "    \"measurements\": measurements,\n",
-    "    #\"expression\": expr_01,\n",
+    "    # \"expression\": expr_01,\n",
     "    # \"measurement_chains\": measurement_chains,\n",
     "    # \"data_sources\": sources,\n",
     "    # \"data_processors\": processors,\n",
